<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.zues.healthok.HomePage">

    <!-- setting -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="collapseActionView|never"/>

    <item android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|never" />

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <!-- Help -->
    <item android:id="@+id/action_help"
        android:title="@string/help"
        app:showAsAction="never"/>

    <!-- Check updates -->
    <item android:id="@+id/action_check_updates"
        android:title="@string/update"
        app:showAsAction="never" />

    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

</menu>
